# Scrembler

./: .gitignore  1.pro  CMakeLists.txt  cmake_init_x64.cmd
sources/: Encoder.cpp  Encoder.h  Scrembler.cpp  Scrembler.h  Worker.cpp  Worker.h  defs.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.h  ui_mainwindow.h
